--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'androidx.navigation.safeargs.kotlin'
+apply plugin: 'org.jetbrains.dokka-android'
 
 androidExtensions {
     experimental = true
@@ -87,6 +88,10 @@ android {
     lintOptions {
         abortOnError false
     }
+}
+
+configurations.all {
+    resolutionStrategy.force "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
 dependencies {
@@ -179,4 +184,15 @@ dependencies {
 
     // Pagination
     implementation "com.github.markomilos:paginate:$pagination_version"
+
+    // Unit Tests
+    testImplementation "junit:junit:$junit_version"
+    testImplementation "org.mockito:mockito-core:$mockito_version"
+    testImplementation "org.mockito:mockito-inline:$mockito_version"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:$mockito_kotlin_version"
+
+    testImplementation "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
+    testImplementation "org.jetbrains.spek:spek-api:$spek_version"
+    testImplementation "org.jetbrains.spek:spek-junit-platform-engine:$spek_version"
+    testImplementation "org.junit.platform:junit-platform-runner:$junit_runner_version"
 }
