--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
         target_sdk = 28
         version_code = 1
         version_name = '1.0.0'
+        dokka_version = "0.9.16"
     }
 
     repositories {
@@ -24,6 +25,8 @@ buildscript {
         classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath "org.jetbrains.dokka:dokka-gradle-plugin:$dokka_version"
+        classpath "org.jetbrains.dokka:dokka-android-gradle-plugin:$dokka_version"
     }
 }
 
@@ -44,10 +47,14 @@ allprojects {
         dagger_version = "2.22.1"
         glide_version = "4.9.0"
         gson_version = "2.8.2"
+        junit_version = "4.12"
+        junit_runner_version = "1.0.0"
         ktx_version = "1.1.0"
         life_cycle_version = "2.1.0"
         material_dialog_version = "0.9.6.0"
         material_version = "1.2.0-alpha03"
+        mockito_version = "3.3.0"
+        mockito_kotlin_version = "2.0.0-alpha03"
         nav_version = "2.1.0"
         okhttp_version = "3.13.1"
         pagination_version = "0.5.1"
@@ -61,6 +68,7 @@ allprojects {
         rx_permission_version = "0.10.2"
         rx_preferences_version = "2.0.0"
         rx_location_version = "1.0.5"
+        spek_version = "1.1.5"
         ui_version = "1.1.0-rc01"
     }
 }
